--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.11.0",
     "mysql2": "^3.14.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
